--- a/commons/pom.xml
+++ b/commons/pom.xml
@@ -18,6 +18,10 @@
     <!-- 依赖项定义 -->
     <dependencies>
         <dependency>
+            <groupId>org.reflections</groupId>
+            <artifactId>reflections</artifactId>
+        </dependency>
+        <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-context</artifactId>
         </dependency>
