1 添加中文到汉语拼音的转化方法 2 调整一些工具方法的命名

--- a/commons/pom.xml
+++ b/commons/pom.xml
@@ -18,6 +18,10 @@
     <!-- 依赖项定义 -->
     <dependencies>
         <dependency>
+            <groupId>com.belerweb</groupId>
+            <artifactId>pinyin4j</artifactId>
+        </dependency>
+        <dependency>
             <groupId>org.reflections</groupId>
             <artifactId>reflections</artifactId>
         </dependency>
