--- a/deps/pom.xml
+++ b/deps/pom.xml
@@ -3,14 +3,13 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <groupId>com.trilemon.commons</groupId>
-    <artifactId>trilemon-commons-parent</artifactId>
+    <groupId>com.trilemon</groupId>
+    <artifactId>trilemon-commons-deps</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>pom</packaging>
 
     <properties>
         <!-- 主要依赖库的版本定义 -->
-        <trilemon.version>1.0-SNAPSHOT</trilemon.version>
         <spring.version>3.2.4.RELEASE</spring.version>
         <mybatis.version>3.2.2</mybatis.version>
         <mybatis-spring.version>1.2.0</mybatis-spring.version>
@@ -19,7 +18,7 @@
         <quartz.version>2.1.6</quartz.version>
         <ehcache.version>2.6.2</ehcache.version>
         <spymemcached.version>2.9.1</spymemcached.version>
-        <hibernate-validator.version>4.3.1.Final</hibernate-validator.version>
+        <hibernate-validator.version>5.0.1.Final</hibernate-validator.version>
         <jackson.version>2.1.2</jackson.version>
         <slf4j.version>1.7.2</slf4j.version>
         <logback.version>1.0.9</logback.version>
@@ -47,6 +46,12 @@
     <dependencyManagement>
         <dependencies>
             <dependency>
+                <groupId>com.taobao.sdk</groupId>
+                <artifactId>standard</artifactId>
+                <version>20130925</version>
+            </dependency>
+
+            <dependency>
                 <groupId>com.belerweb</groupId>
                 <artifactId>pinyin4j</artifactId>
                 <version>2.5.0</version>
@@ -57,6 +62,7 @@
                 <artifactId>reflections</artifactId>
                 <version>0.9.9-RC1</version>
             </dependency>
+
             <!-- SPRING basic begin(一般不需要显式定义) -->
             <dependency>
                 <groupId>org.springframework</groupId>
@@ -577,12 +583,20 @@
                 <artifactId>jfreechart</artifactId>
                 <version>1.0.15</version>
             </dependency>
-
         </dependencies>
     </dependencyManagement>
 
     <!-- 插件配置 -->
     <build>
+        <resources>
+            <resource>
+                <directory>src/main/resources</directory>
+                <excludes>
+                    <exclude>**/*.sql</exclude>
+                </excludes>
+            </resource>
+        </resources>
+
         <pluginManagement>
             <plugins>
                 <!-- compiler插件, 设定JDK版本 -->
