--- a/deps/pom.xml
+++ b/deps/pom.xml
@@ -8,6 +8,13 @@
     <version>1.0-SNAPSHOT</version>
     <packaging>pom</packaging>
 
+    <repositories>
+        <repository>
+            <id>JBoss repository</id>
+            <url>http://repository.jboss.org/nexus/content/groups/public/</url>
+        </repository>
+    </repositories>
+
     <properties>
         <!-- 主要依赖库的版本定义 -->
         <spring.version>3.2.4.RELEASE</spring.version>
@@ -49,6 +56,30 @@
                 <groupId>com.taobao.sdk</groupId>
                 <artifactId>standard</artifactId>
                 <version>20130925</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.apache.zookeeper</groupId>
+                <artifactId>zookeeper</artifactId>
+                <version>3.4.5</version>
+            </dependency>
+
+            <dependency>
+                <groupId>com.101tec</groupId>
+                <artifactId>zkclient</artifactId>
+                <version>0.4</version>
+            </dependency>
+
+            <dependency>
+                <groupId>com.alibaba</groupId>
+                <artifactId>dubbo</artifactId>
+                <version>2.5.3</version>
+                <exclusions>
+                    <exclusion>
+                        <artifactId>org.springframework</artifactId>
+                        <groupId>spring</groupId>
+                    </exclusion>
+                </exclusions>
             </dependency>
 
             <dependency>
@@ -546,7 +577,6 @@
             </dependency>
 
             <!-- TEST end -->
-            <!--taobao sdk-->
             <dependency>
                 <groupId>com.google.code.findbugs</groupId>
                 <artifactId>jsr305</artifactId>
@@ -576,7 +606,7 @@
             <dependency>
                 <groupId>redis.clients</groupId>
                 <artifactId>jedis</artifactId>
-                <version>2.1.0</version>
+                <version>2.2.1</version>
             </dependency>
             <dependency>
                 <groupId>org.jfree</groupId>
@@ -754,6 +784,7 @@
                                             <exclude>aspectj:aspectj*</exclude>
                                             <exclude>org.springframework:2.*</exclude>
                                             <exclude>org.springframework:3.0.*</exclude>
+                                            <exclude>org.springframework:3.1.*</exclude>
                                         </excludes>
                                     </bannedDependencies>
                                 </rules>
