--- a/deps/pom.xml
+++ b/deps/pom.xml
@@ -711,7 +711,7 @@
                     <executions>
                         <execution>
                             <id>attach-sources</id>
-                            <phase>deploy</phase>
+                            <phase>install</phase>
                             <goals>
                                 <goal>jar-no-fork</goal>
                             </goals>
