--- a/commons/pom.xml
+++ b/commons/pom.xml
@@ -18,6 +18,11 @@
     <!-- 依赖项定义 -->
     <dependencies>
         <dependency>
+            <groupId>com.google.protobuf</groupId>
+            <artifactId>protobuf-java</artifactId>
+        </dependency>
+
+        <dependency>
             <groupId>com.belerweb</groupId>
             <artifactId>pinyin4j</artifactId>
         </dependency>
