--- a/deps/pom.xml
+++ b/deps/pom.xml
@@ -53,6 +53,12 @@
     <dependencyManagement>
         <dependencies>
             <dependency>
+                <groupId>com.google.protobuf</groupId>
+                <artifactId>protobuf-java</artifactId>
+                <version>2.5.0</version>
+            </dependency>
+
+            <dependency>
                 <groupId>com.taobao.sdk</groupId>
                 <artifactId>standard</artifactId>
                 <version>20130925</version>
