--- a/deps/pom.xml
+++ b/deps/pom.xml
@@ -19,30 +19,30 @@
         <!-- 主要依赖库的版本定义 -->
         <spring.version>3.2.4.RELEASE</spring.version>
         <mybatis.version>3.2.3</mybatis.version>
-        <mybatis-spring.version>1.2.0</mybatis-spring.version>
+        <mybatis-spring.version>1.2.1</mybatis-spring.version>
         <sitemesh.version>2.4.2</sitemesh.version>
-        <shiro.version>1.2.1</shiro.version>
-        <quartz.version>2.1.6</quartz.version>
-        <ehcache.version>2.6.2</ehcache.version>
-        <spymemcached.version>2.9.1</spymemcached.version>
+        <shiro.version>1.2.2</shiro.version>
+        <quartz.version>2.2.1</quartz.version>
+        <ehcache.version>2.6.6</ehcache.version>
+        <spymemcached.version>2.10.1</spymemcached.version>
         <hibernate-validator.version>5.0.1.Final</hibernate-validator.version>
-        <jackson.version>2.1.2</jackson.version>
-        <slf4j.version>1.7.2</slf4j.version>
-        <logback.version>1.0.9</logback.version>
+        <jackson.version>2.2.3</jackson.version>
+        <slf4j.version>1.7.5</slf4j.version>
+        <logback.version>1.0.13</logback.version>
         <commons-lang3.version>3.1</commons-lang3.version>
         <commons-io.version>2.4</commons-io.version>
-        <guava.version>14.0-rc2</guava.version>
-        <joda-time.version>2.1</joda-time.version>
+        <guava.version>15.0</guava.version>
+        <joda-time.version>2.3</joda-time.version>
         <dozer.version>5.4.0</dozer.version>
-        <httpclient.version>4.2.2</httpclient.version>
-        <freemarker.version>2.3.19</freemarker.version>
+        <httpclient.version>4.3.1</httpclient.version>
+        <freemarker.version>2.3.20</freemarker.version>
         <junit.version>4.11</junit.version>
         <mockito.version>1.9.5</mockito.version>
         <powermock.version>1.5</powermock.version>
         <selenium.version>2.28.0</selenium.version>
         <jetty.version>8.1.12.v20130726</jetty.version>
-        <mysql.version>5.1.23</mysql.version>
-        <druid.version>0.2.9</druid.version>
+        <mysql.version>5.1.26</mysql.version>
+        <druid.version>1.0.0</druid.version>
 
         <!-- Plugin的属性定义 -->
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
