--- a/deps/pom.xml
+++ b/deps/pom.xml
@@ -18,6 +18,7 @@
     <properties>
         <!-- 主要依赖库的版本定义 -->
         <spring.version>3.2.4.RELEASE</spring.version>
+        <ibatis.version>2.3.4.726</ibatis.version>
         <mybatis.version>3.2.3</mybatis.version>
         <mybatis-spring.version>1.2.1</mybatis-spring.version>
         <sitemesh.version>2.4.2</sitemesh.version>
@@ -62,6 +63,12 @@
                 <groupId>com.taobao.sdk</groupId>
                 <artifactId>turbo</artifactId>
                 <version>20131105</version>
+            </dependency>
+
+            <dependency>
+                <groupId>cn.emay.sdk</groupId>
+                <artifactId>emayclient</artifactId>
+                <version>4.3.2</version>
             </dependency>
 
             <dependency>
@@ -163,6 +170,12 @@
                 <scope>runtime</scope>
             </dependency>
             <!-- AOP end -->
+
+            <dependency>
+                <groupId>org.apache.ibatis</groupId>
+                <artifactId>ibatis-sqlmap</artifactId>
+                <version>${ibatis.version}</version>
+            </dependency>
 
             <dependency>
                 <groupId>org.mybatis</groupId>
