增加短信接口包和 ibatis 包（ibatis 为分库分表准备）

--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,7 @@
     <modules>
         <module>deps</module>
         <module>commons</module>
+        <module>job-queue</module>
     </modules>
 
     <description>Trilemon-Commons</description>
