--- a/deps/pom.xml
+++ b/deps/pom.xml
@@ -19,6 +19,7 @@
         <!-- 主要依赖库的版本定义 -->
         <spring.version>3.2.4.RELEASE</spring.version>
         <ibatis.version>2.3.4.726</ibatis.version>
+        <cobarclient.version>2.1.0-SNAPSHOT</cobarclient.version>
         <mybatis.version>3.2.3</mybatis.version>
         <mybatis-spring.version>1.2.1</mybatis-spring.version>
         <sitemesh.version>2.4.2</sitemesh.version>
@@ -187,6 +188,12 @@
                 <groupId>org.apache.ibatis</groupId>
                 <artifactId>ibatis-sqlmap</artifactId>
                 <version>${ibatis.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>com.alibaba.cobar</groupId>
+                <artifactId>cobar-client</artifactId>
+                <version>${cobarclient.version}</version>
             </dependency>
 
             <dependency>
