--- a/deps/pom.xml
+++ b/deps/pom.xml
@@ -56,6 +56,12 @@
     <dependencyManagement>
         <dependencies>
             <dependency>
+                <groupId>net.sourceforge.htmlcleaner</groupId>
+                <artifactId>htmlcleaner</artifactId>
+                <version>2.2</version>
+            </dependency>
+
+            <dependency>
                 <groupId>com.alibaba.rocketmq</groupId>
                 <artifactId>rocketmq-client</artifactId>
                 <version>${rocketmq.version}</version>
