修改基于 redis 的队列实现

--- a/job-queue/pom.xml
+++ b/job-queue/pom.xml
@@ -1,22 +1,21 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xmlns="http://maven.apache.org/POM/4.0.0"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
         <groupId>com.qumoon</groupId>
         <artifactId>qumoon-deps</artifactId>
-        <version>1.0-SNAPSHOT</version>
+        <version>1.5-SNAPSHOT</version>
     </parent>
 
     <artifactId>qumoon-job-queue</artifactId>
-    <version>1.0-SNAPSHOT</version>
     <packaging>jar</packaging>
 
     <properties>
         <!-- 主要依赖库的版本定义 -->
-        <qumoon.commons.version>1.0-SNAPSHOT</qumoon.commons.version>
+        <qumoon.commons.version>1.5-SNAPSHOT</qumoon.commons.version>
     </properties>
 
     <distributionManagement>
@@ -28,6 +27,10 @@
 
     <!-- 依赖项定义 -->
     <dependencies>
+        <dependency>
+            <groupId>org.springframework.data</groupId>
+            <artifactId>spring-data-redis</artifactId>
+        </dependency>
         <dependency>
             <groupId>com.qumoon</groupId>
             <artifactId>qumoon-commons</artifactId>
